--- a/Copy_of_assignment_regression_classification_3.ipynb
+++ b/Copy_of_assignment_regression_classification_3.ipynb
@@ -51,9 +51,9 @@
         "- [X] Do exploratory visualizations with Seaborn.\n",
         "- [X] Do one-hot encoding of categorical features.\n",
         "- [X] Do feature selection with `SelectKBest`.\n",
-        "- [ ] Fit a linear regression model with multiple features.\n",
-        "- [ ] Get mean absolute error for the test set.\n",
-        "- [ ] As always, commit your notebook to your fork of the GitHub repo.\n",
+        "- [X] Fit a linear regression model with multiple features.\n",
+        "- [X] Get mean absolute error for the test set.\n",
+        "- [X] As always, commit your notebook to your fork of the GitHub repo.\n",
         "\n",
         "\n",
         "## Stretch Goals\n",
@@ -160,16 +160,16 @@
       "metadata": {
         "id": "BSH49dcgtdeS",
         "colab_type": "code",
+        "outputId": "1ed01892-70d4-41ab-d365-e1982ad92e69",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 163
-        },
-        "outputId": "1ed01892-70d4-41ab-d365-e1982ad92e69"
+        }
       },
       "source": [
         "df.columns"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,18 +197,18 @@
       "metadata": {
         "id": "bgxPtNiEtARa",
         "colab_type": "code",
+        "outputId": "d6c13901-b171-4570-8ea5-39570490c720",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 144
-        },
-        "outputId": "d6c13901-b171-4570-8ea5-39570490c720"
+        }
       },
       "source": [
         "clean_df = df[(df.SALE_PRICE > 100000) & (df.SALE_PRICE < 2000000) & (df.BUILDING_CLASS_CATEGORY == '01 ONE FAMILY DWELLINGS')].copy()\n",
         "clean_df['SALE_DATE'] = pd.to_datetime(clean_df['SALE_DATE'], infer_datetime_format=True)\n",
         "clean_df['SALE_DATE'].describe()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,11 +249,11 @@
       "metadata": {
         "id": "qlNaULZXzLpu",
         "colab_type": "code",
+        "outputId": "fe06c2da-cebe-4718-cec5-63e48e006808",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "fe06c2da-cebe-4718-cec5-63e48e006808"
+        }
       },
       "source": [
         "import seaborn as sns\n",
@@ -264,7 +264,7 @@
         "    sns.catplot(x=col, y='SALE_PRICE', data=train, kind='bar', color='gray')\n",
         "    plt.show();"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -357,11 +357,11 @@
       "metadata": {
         "id": "iEVYHoZt1gMt",
         "colab_type": "code",
+        "outputId": "9f208716-0e40-4d4c-e96b-5f9fd285eef4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "9f208716-0e40-4d4c-e96b-5f9fd285eef4"
+        }
       },
       "source": [
         "numberic = train.select_dtypes('number')\n",
@@ -369,7 +369,7 @@
         "  sns.lmplot(x=x, y='SALE_PRICE', data=train, scatter_kws=dict(alpha=0.05))\n",
         "  plt.show();"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -522,17 +522,17 @@
       "metadata": {
         "id": "_exJRYOn9sUu",
         "colab_type": "code",
+        "outputId": "b93325a0-f4ca-48b2-e6f1-ea4a766c378a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 327
-        },
-        "outputId": "b93325a0-f4ca-48b2-e6f1-ea4a766c378a"
+        }
       },
       "source": [
         "# Can do One-Hot Encoding with TAX_CLASS_AT_PRESENT \n",
         "train.describe(exclude = 'number')"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -668,16 +668,16 @@
       "metadata": {
         "id": "5z0rc81pExih",
         "colab_type": "code",
+        "outputId": "ecd5f475-4526-48a8-9eab-fb1e28ac3f2f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "ecd5f475-4526-48a8-9eab-fb1e28ac3f2f"
+        }
       },
       "source": [
         "train['TAX_CLASS_AT_PRESENT'].value_counts()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -700,18 +700,18 @@
       "metadata": {
         "id": "DMqZJxaOGLvP",
         "colab_type": "code",
+        "outputId": "73b648c5-2b8e-4453-a10e-dcacc100bf3d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        },
-        "outputId": "73b648c5-2b8e-4453-a10e-dcacc100bf3d"
+        }
       },
       "source": [
         "import category_encoders as ce\n",
         "encoder = ce.OneHotEncoder(use_cat_names=True)\n",
         "train['TAX_CLASS_AT_PRESENT'] = encoder.fit_transform(train['TAX_CLASS_AT_PRESENT'])\n"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -738,18 +738,18 @@
       "metadata": {
         "id": "y9oZSvl2R9K2",
         "colab_type": "code",
+        "outputId": "6716201d-385c-403a-d8e9-ef8a598bc035",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 181
-        },
-        "outputId": "6716201d-385c-403a-d8e9-ef8a598bc035"
+        }
       },
       "source": [
         "encoder = ce.OneHotEncoder(use_cat_names=True)\n",
         "test['TAX_CLASS_AT_PRESENT'] = encoder.fit_transform(test['TAX_CLASS_AT_PRESENT'])\n",
         "test['TAX_CLASS_AT_PRESENT'].value_counts()"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -784,11 +784,11 @@
       "metadata": {
         "id": "JzIxSHjELuBy",
         "colab_type": "code",
+        "outputId": "faf9e1f8-740e-48a7-9d52-caccce0a4127",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 345
-        },
-        "outputId": "faf9e1f8-740e-48a7-9d52-caccce0a4127"
+        }
       },
       "source": [
         "# Converting numeric column to string\n",
@@ -804,7 +804,7 @@
         "train.loc[~train['NEIGHBORHOOD'].isin(top10), 'NEIGHBORHOOD'] = 'OTHER'\n",
         "test.loc[~test['NEIGHBORHOOD'].isin(top10), 'NEIGHBORHOOD'] = 'OTHER'"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -837,16 +837,16 @@
       "metadata": {
         "id": "Y6aIfypzTVgx",
         "colab_type": "code",
+        "outputId": "bce38aef-d4d6-4ccd-9eba-10c5c8b7c002",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 332
-        },
-        "outputId": "bce38aef-d4d6-4ccd-9eba-10c5c8b7c002"
+        }
       },
       "source": [
         "train.describe(exclude='number').T.sort_values(by='unique')"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -991,11 +991,11 @@
       "metadata": {
         "id": "t_Ct3BBGO2Dv",
         "colab_type": "code",
+        "outputId": "8fdceb41-1fc7-4a3a-a4b8-501bbe0e7a13",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 417
-        },
-        "outputId": "8fdceb41-1fc7-4a3a-a4b8-501bbe0e7a13"
+        }
       },
       "source": [
         "from sklearn.feature_selection import f_regression, SelectKBest\n",
@@ -1040,7 +1040,7 @@
         "for name in notselected_names:\n",
         "  print(name)"
       ],
-      "execution_count": 102,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1108,11 +1108,11 @@
       "metadata": {
         "id": "ofyBKzTTdeL-",
         "colab_type": "code",
+        "outputId": "3483041e-e0a9-403e-dea8-e6690cf72e29",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        },
-        "outputId": "3483041e-e0a9-403e-dea8-e6690cf72e29"
+        }
       },
       "source": [
         "from sklearn.metrics import mean_absolute_error, r2_score\n",
@@ -1123,7 +1123,7 @@
         "print('The mean absolute error: ', mae)\n",
         "print('R^2: ', r2)"
       ],
-      "execution_count": 104,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
