--- a/module2/assignment_regression_classification_2.ipynb
+++ b/module2/assignment_regression_classification_2.ipynb
@@ -29,13 +29,13 @@
         "\n",
         "You'll continue to **predict how much it costs to rent an apartment in NYC,** using the dataset from renthop.com.\n",
         "\n",
-        "- [ ] Do train/test split. Use data from April & May 2016 to train. Use data from June 2016 to test.\n",
-        "- [ ] Engineer at least two new features. (See below for explanation & ideas.)\n",
-        "- [ ] Fit a linear regression model with at least two features.\n",
-        "- [ ] Get the model's coefficients and intercept.\n",
-        "- [ ] Get regression metrics RMSE, MAE, and $R^2$, for both the train and test data.\n",
-        "- [ ] What's the best test MAE you can get? Share your score and features used with your cohort on Slack!\n",
-        "- [ ] As always, commit your notebook to your fork of the GitHub repo.\n",
+        "- [X] Do train/test split. Use data from April & May 2016 to train. Use data from June 2016 to test.\n",
+        "- [X] Engineer at least two new features. (See below for explanation & ideas.)\n",
+        "- [X] Fit a linear regression model with at least two features.\n",
+        "- [X] Get the model's coefficients and intercept.\n",
+        "- [X] Get regression metrics RMSE, MAE, and $R^2$, for both the train and test data.\n",
+        "- [X] What's the best test MAE you can get? Share your score and features used with your cohort on Slack!\n",
+        "- [X] As always, commit your notebook to your fork of the GitHub repo.\n",
         "\n",
         "\n",
         "#### [Feature Engineering](https://en.wikipedia.org/wiki/Feature_engineering)\n",
@@ -69,11 +69,11 @@
       "metadata": {
         "id": "o9eSnDYhUGD7",
         "colab_type": "code",
+        "outputId": "9607453a-f7c6-44af-cd42-4d1000a263f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "9607453a-f7c6-44af-cd42-4d1000a263f6"
+        }
       },
       "source": [
         "# If you're in Colab...\n",
@@ -95,7 +95,7 @@
         "    # Change into directory for module\n",
         "    os.chdir('module1')"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,7 +325,7 @@
         "print(f'The R2 score for Train :{r2_score(train_price,y_train):.2f} and Test:{r2_score(test_price,y_test):.2f}')\n",
         "print(f'The RMSE score for Train :{rmse_train:.2f} and Test:{rmse_test:.2f}')\n"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,11 +379,7 @@
       "metadata": {
         "id": "Z0g9kItX3Wm3",
         "colab_type": "code",
-        "outputId": "a02cf671-e971-487a-b5e3-bf7135d426ad",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 561
-        }
+        "colab": {}
       },
       "source": [
         "# Do train/test split. Use data from April & May 2016 to train. Use data from June 2016 to test.\n",
@@ -395,51 +391,7 @@
         "# As always, commit your notebook to your fork of the GitHub repo.\n"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "bathrooms               0\n",
-              "bedrooms                0\n",
-              "latitude                0\n",
-              "longitude               0\n",
-              "interest_level          0\n",
-              "elevator                0\n",
-              "cats_allowed            0\n",
-              "hardwood_floors         0\n",
-              "dogs_allowed            0\n",
-              "doorman                 0\n",
-              "dishwasher              0\n",
-              "no_fee                  0\n",
-              "laundry_in_building     0\n",
-              "fitness_center          0\n",
-              "pre-war                 0\n",
-              "laundry_in_unit         0\n",
-              "roof_deck               0\n",
-              "outdoor_space           0\n",
-              "dining_room             0\n",
-              "high_speed_internet     0\n",
-              "balcony                 0\n",
-              "swimming_pool           0\n",
-              "new_construction        0\n",
-              "terrace                 0\n",
-              "exclusive               0\n",
-              "loft                    0\n",
-              "garden_patio            0\n",
-              "wheelchair_access       0\n",
-              "common_outdoor_space    0\n",
-              "bath_bed                0\n",
-              "no_of_perks             0\n",
-              "dtype: int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 45
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
