--- a/module3/assignment_regression_classification_3.ipynb
+++ b/module3/assignment_regression_classification_3.ipynb
@@ -1586,7 +1586,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "22667997-0477-4261-86b2-0bdfe03aa1ba"
+        "outputId": "636f4f98-ab04-4ec1-89b7-7914bb311433"
       },
       "source": [
         "#Organising the code\n",
@@ -1598,6 +1598,7 @@
         "from sklearn.feature_selection import f_regression, SelectKBest\n",
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.metrics import mean_absolute_error\n",
+        "from sklearn.linear_model import RidgeCV\n",
         "\n",
         "\n",
         "# Read New York City property sales data\n",
@@ -1634,7 +1635,7 @@
         "train['BOROUGH'] = train['BOROUGH'].astype(str)\n",
         "test['BOROUGH'] = test['BOROUGH'].astype(str)\n",
         "\n",
-        "TOPVALUE = 10\n",
+        "TOPVALUE = 40\n",
         "#Zip code as a categorical feature and reducing the cardinal feature\n",
         "train['ZIP_CODE'] = train['ZIP_CODE'].astype(str)\n",
         "test['ZIP_CODE'] = test['ZIP_CODE'].astype(str)\n",
@@ -1663,8 +1664,8 @@
         "test['land_and_gross']=test['GROSS_SQUARE_FEET']+test['LAND_SQUARE_FEET']\n",
         "\n",
         "#Binning Year Built as category value\n",
-        "year_bins = [year for year in range(int(train.YEAR_BUILT.min())-1,int(train.YEAR_BUILT.max())+11,10)]\n",
-        "labels = [str(year)+'year' for year in range(int(train.YEAR_BUILT.min())-1,int(train.YEAR_BUILT.max()),10)]\n",
+        "year_bins = [year for year in range(int(train.YEAR_BUILT.min())-1,int(train.YEAR_BUILT.max())+6,5)]\n",
+        "labels = [str(year)+'year' for year in range(int(train.YEAR_BUILT.min())-1,int(train.YEAR_BUILT.max()),5)]\n",
         "train['YEAR_BIN'] = pd.cut(train['YEAR_BUILT'],bins=year_bins,labels=labels)\n",
         "test['YEAR_BIN'] = pd.cut(test['YEAR_BUILT'],bins=year_bins,labels=labels)\n",
         "\n",
@@ -1688,14 +1689,14 @@
         "  selector = SelectKBest(score_func=f_regression, k=k)\n",
         "  X_train_selector =  selector.fit_transform(X_train_encoded,y_train)\n",
         "  X_test_selector = selector.transform(X_test_encoded)\n",
-        "  model = LinearRegression()\n",
+        "  model = RidgeCV()\n",
         "  model.fit(X_train_selector,y_train)\n",
         "  train_predict = (model.predict(X_train_selector))\n",
         "  test_predict = (model.predict(X_test_selector))\n",
         "  print(f'Features :{k} , MAE:{mean_absolute_error(y_test,test_predict):0.2f}')\n",
         "\n"
       ],
-      "execution_count": 152,
+      "execution_count": 155,
       "outputs": [
         {
           "output_type": "stream",
@@ -1703,82 +1704,168 @@
             "Features :1 , MAE:183640.59\n",
             "Features :2 , MAE:179554.77\n",
             "Features :3 , MAE:179554.77\n",
-            "Features :4 , MAE:178556.00\n",
-            "Features :5 , MAE:179291.47\n",
-            "Features :6 , MAE:178896.91\n",
-            "Features :7 , MAE:174122.98\n",
-            "Features :8 , MAE:173275.66\n",
-            "Features :9 , MAE:172467.02\n",
-            "Features :10 , MAE:168806.12\n",
-            "Features :11 , MAE:168374.26\n",
-            "Features :12 , MAE:156847.99\n",
-            "Features :13 , MAE:157745.44\n",
-            "Features :14 , MAE:156566.16\n",
-            "Features :15 , MAE:156576.06\n",
-            "Features :16 , MAE:156580.51\n",
-            "Features :17 , MAE:156478.39\n",
-            "Features :18 , MAE:156450.63\n",
-            "Features :19 , MAE:158750.21\n",
-            "Features :20 , MAE:158634.98\n",
-            "Features :21 , MAE:158634.98\n",
-            "Features :22 , MAE:158643.82\n",
-            "Features :23 , MAE:158504.25\n",
-            "Features :24 , MAE:158394.76\n",
-            "Features :25 , MAE:158500.86\n",
-            "Features :26 , MAE:158301.89\n",
-            "Features :27 , MAE:158787.07\n",
-            "Features :28 , MAE:158653.26\n",
-            "Features :29 , MAE:158653.26\n",
-            "Features :30 , MAE:158625.25\n",
-            "Features :31 , MAE:158426.26\n",
-            "Features :32 , MAE:158391.04\n",
-            "Features :33 , MAE:158275.18\n",
-            "Features :34 , MAE:158209.88\n",
-            "Features :35 , MAE:158167.97\n",
-            "Features :36 , MAE:158081.70\n",
-            "Features :37 , MAE:157646.84\n",
-            "Features :38 , MAE:157592.10\n",
-            "Features :39 , MAE:157587.92\n",
-            "Features :40 , MAE:157587.92\n",
-            "Features :41 , MAE:156961.49\n",
-            "Features :42 , MAE:157192.63\n",
-            "Features :43 , MAE:157030.83\n",
-            "Features :44 , MAE:157120.65\n",
-            "Features :45 , MAE:157122.39\n",
-            "Features :46 , MAE:486055299.21\n",
-            "Features :47 , MAE:156899.79\n",
-            "Features :48 , MAE:156968.47\n",
-            "Features :49 , MAE:156980.78\n",
-            "Features :50 , MAE:156982.18\n",
-            "Features :51 , MAE:157026.46\n",
-            "Features :52 , MAE:156377.78\n",
-            "Features :53 , MAE:156377.78\n",
-            "Features :54 , MAE:156395.15\n",
-            "Features :55 , MAE:156395.15\n",
-            "Features :56 , MAE:155598.48\n",
-            "Features :57 , MAE:155654.68\n",
-            "Features :58 , MAE:155770.41\n",
-            "Features :59 , MAE:155819.78\n",
-            "Features :60 , MAE:155703.45\n",
-            "Features :61 , MAE:155833.90\n",
-            "Features :62 , MAE:155827.09\n",
-            "Features :63 , MAE:156050.77\n",
-            "Features :64 , MAE:156193.56\n",
-            "Features :65 , MAE:156120.90\n",
-            "Features :66 , MAE:156128.22\n",
-            "Features :67 , MAE:154856.98\n",
-            "Features :68 , MAE:154856.98\n",
-            "Features :69 , MAE:154376.69\n",
-            "Features :70 , MAE:154715.08\n",
-            "Features :71 , MAE:154886.79\n",
-            "Features :72 , MAE:154886.79\n",
-            "Features :73 , MAE:154857.61\n",
-            "Features :74 , MAE:154854.61\n",
-            "Features :75 , MAE:154854.61\n"
+            "Features :4 , MAE:171343.23\n",
+            "Features :5 , MAE:171056.18\n",
+            "Features :6 , MAE:171099.71\n",
+            "Features :7 , MAE:169794.41\n",
+            "Features :8 , MAE:169219.55\n",
+            "Features :9 , MAE:168234.98\n",
+            "Features :10 , MAE:164693.05\n",
+            "Features :11 , MAE:159364.68\n",
+            "Features :12 , MAE:159345.95\n",
+            "Features :13 , MAE:153417.98\n",
+            "Features :14 , MAE:152371.89\n",
+            "Features :15 , MAE:151439.66\n",
+            "Features :16 , MAE:151131.60\n",
+            "Features :17 , MAE:151178.97\n",
+            "Features :18 , MAE:151948.75\n",
+            "Features :19 , MAE:149922.67\n",
+            "Features :20 , MAE:149924.10\n",
+            "Features :21 , MAE:149928.08\n",
+            "Features :22 , MAE:149554.47\n",
+            "Features :23 , MAE:149405.89\n",
+            "Features :24 , MAE:149400.65\n",
+            "Features :25 , MAE:151169.23\n",
+            "Features :26 , MAE:150988.11\n",
+            "Features :27 , MAE:150973.65\n",
+            "Features :28 , MAE:150830.69\n",
+            "Features :29 , MAE:150826.15\n",
+            "Features :30 , MAE:150812.73\n",
+            "Features :31 , MAE:149571.70\n",
+            "Features :32 , MAE:149461.45\n",
+            "Features :33 , MAE:150173.91\n",
+            "Features :34 , MAE:150269.30\n",
+            "Features :35 , MAE:150288.03\n",
+            "Features :36 , MAE:150319.53\n",
+            "Features :37 , MAE:150340.17\n",
+            "Features :38 , MAE:149819.83\n",
+            "Features :39 , MAE:149979.60\n",
+            "Features :40 , MAE:149799.42\n",
+            "Features :41 , MAE:149718.04\n",
+            "Features :42 , MAE:149671.63\n",
+            "Features :43 , MAE:149641.68\n",
+            "Features :44 , MAE:149520.49\n",
+            "Features :45 , MAE:149729.81\n",
+            "Features :46 , MAE:149771.48\n",
+            "Features :47 , MAE:149613.42\n",
+            "Features :48 , MAE:149942.78\n",
+            "Features :49 , MAE:150146.45\n",
+            "Features :50 , MAE:150654.30\n",
+            "Features :51 , MAE:150795.52\n",
+            "Features :52 , MAE:151079.08\n",
+            "Features :53 , MAE:150799.16\n",
+            "Features :54 , MAE:150194.01\n",
+            "Features :55 , MAE:150102.88\n",
+            "Features :56 , MAE:150330.97\n",
+            "Features :57 , MAE:150401.09\n",
+            "Features :58 , MAE:150404.05\n",
+            "Features :59 , MAE:150404.14\n",
+            "Features :60 , MAE:150746.37\n",
+            "Features :61 , MAE:150809.69\n",
+            "Features :62 , MAE:150572.90\n",
+            "Features :63 , MAE:150688.57\n",
+            "Features :64 , MAE:150609.69\n",
+            "Features :65 , MAE:150627.39\n",
+            "Features :66 , MAE:150606.43\n",
+            "Features :67 , MAE:150497.46\n",
+            "Features :68 , MAE:150423.44\n",
+            "Features :69 , MAE:150817.75\n",
+            "Features :70 , MAE:150934.53\n",
+            "Features :71 , MAE:149855.60\n",
+            "Features :72 , MAE:149965.87\n",
+            "Features :73 , MAE:149972.78\n",
+            "Features :74 , MAE:149927.82\n",
+            "Features :75 , MAE:149230.28\n",
+            "Features :76 , MAE:148331.50\n",
+            "Features :77 , MAE:148375.80\n",
+            "Features :78 , MAE:148356.67\n",
+            "Features :79 , MAE:148272.02\n",
+            "Features :80 , MAE:148355.92\n",
+            "Features :81 , MAE:148433.58\n",
+            "Features :82 , MAE:148250.36\n",
+            "Features :83 , MAE:148548.67\n",
+            "Features :84 , MAE:148521.84\n",
+            "Features :85 , MAE:148652.36\n",
+            "Features :86 , MAE:148357.57\n",
+            "Features :87 , MAE:148368.91\n",
+            "Features :88 , MAE:148350.35\n",
+            "Features :89 , MAE:148336.68\n",
+            "Features :90 , MAE:147828.19\n",
+            "Features :91 , MAE:147844.30\n",
+            "Features :92 , MAE:147962.14\n",
+            "Features :93 , MAE:147965.38\n",
+            "Features :94 , MAE:147988.59\n",
+            "Features :95 , MAE:147909.96\n",
+            "Features :96 , MAE:147860.35\n",
+            "Features :97 , MAE:147783.66\n",
+            "Features :98 , MAE:147782.94\n",
+            "Features :99 , MAE:147800.87\n",
+            "Features :100 , MAE:147442.90\n",
+            "Features :101 , MAE:147289.13\n",
+            "Features :102 , MAE:147095.83\n",
+            "Features :103 , MAE:146787.40\n",
+            "Features :104 , MAE:147176.12\n",
+            "Features :105 , MAE:147251.01\n",
+            "Features :106 , MAE:147256.04\n",
+            "Features :107 , MAE:147013.36\n",
+            "Features :108 , MAE:146793.87\n",
+            "Features :109 , MAE:147234.55\n",
+            "Features :110 , MAE:146942.28\n",
+            "Features :111 , MAE:146975.84\n",
+            "Features :112 , MAE:147068.32\n",
+            "Features :113 , MAE:147107.55\n",
+            "Features :114 , MAE:147117.15\n",
+            "Features :115 , MAE:147060.27\n",
+            "Features :116 , MAE:147036.60\n",
+            "Features :117 , MAE:147021.86\n",
+            "Features :118 , MAE:146379.01\n",
+            "Features :119 , MAE:146384.89\n",
+            "Features :120 , MAE:146394.71\n",
+            "Features :121 , MAE:146332.07\n",
+            "Features :122 , MAE:146065.37\n",
+            "Features :123 , MAE:146055.36\n",
+            "Features :124 , MAE:146036.56\n",
+            "Features :125 , MAE:145246.56\n",
+            "Features :126 , MAE:145185.99\n",
+            "Features :127 , MAE:145020.78\n",
+            "Features :128 , MAE:144987.28\n",
+            "Features :129 , MAE:144983.08\n",
+            "Features :130 , MAE:145086.44\n",
+            "Features :131 , MAE:145029.35\n",
+            "Features :132 , MAE:144791.68\n",
+            "Features :133 , MAE:144705.83\n",
+            "Features :134 , MAE:144933.51\n",
+            "Features :135 , MAE:144906.49\n",
+            "Features :136 , MAE:144870.60\n",
+            "Features :137 , MAE:144866.95\n",
+            "Features :138 , MAE:145417.83\n",
+            "Features :139 , MAE:145418.54\n",
+            "Features :140 , MAE:144986.49\n",
+            "Features :141 , MAE:145091.72\n",
+            "Features :142 , MAE:145175.28\n",
+            "Features :143 , MAE:145562.89\n",
+            "Features :144 , MAE:145557.87\n",
+            "Features :145 , MAE:145575.35\n",
+            "Features :146 , MAE:145494.35\n",
+            "Features :147 , MAE:145563.21\n",
+            "Features :148 , MAE:145735.55\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kOLJ2p7Et2zK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
