213 regression classification assignment

--- a/module3/assignment_regression_classification_3.ipynb
+++ b/module3/assignment_regression_classification_3.ipynb
@@ -9408,13 +9408,64 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "RLXU9CKxIrf6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 391
+        },
+        "outputId": "dd6bcef5-d625-46c0-84c4-af920e8d3875"
+      },
+      "source": [
+        "train_merged.select_dtypes('number').columns"
+      ],
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['BLOCK', 'LOT', 'ZIP_CODE', 'RESIDENTIAL_UNITS', 'COMMERCIAL_UNITS',\n",
+              "       'TOTAL_UNITS', 'GROSS_SQUARE_FEET', 'YEAR_BUILT',\n",
+              "       'TAX_CLASS_AT_TIME_OF_SALE', 'SALE_PRICE', 'BOROUGH_3', 'BOROUGH_4',\n",
+              "       'BOROUGH_2', 'BOROUGH_5', 'BOROUGH_1', 'NEIGHBORHOOD_OTHER',\n",
+              "       'NEIGHBORHOOD_QUEENS VILLAGE', 'NEIGHBORHOOD_BAYSIDE',\n",
+              "       'NEIGHBORHOOD_FLUSHING-NORTH', 'NEIGHBORHOOD_LAURELTON',\n",
+              "       'NEIGHBORHOOD_SO. JAMAICA-BAISLEY PARK',\n",
+              "       'NEIGHBORHOOD_SPRINGFIELD GARDENS', 'NEIGHBORHOOD_GREAT KILLS',\n",
+              "       'NEIGHBORHOOD_SOUTH OZONE PARK', 'NEIGHBORHOOD_MIDLAND BEACH',\n",
+              "       'NEIGHBORHOOD_ST. ALBANS', 'BUILDING_CLASS_AT_TIME_OF_SALE_A9',\n",
+              "       'BUILDING_CLASS_AT_TIME_OF_SALE_A1',\n",
+              "       'BUILDING_CLASS_AT_TIME_OF_SALE_A5',\n",
+              "       'BUILDING_CLASS_AT_TIME_OF_SALE_A0',\n",
+              "       'BUILDING_CLASS_AT_TIME_OF_SALE_A2',\n",
+              "       'BUILDING_CLASS_AT_TIME_OF_SALE_A3',\n",
+              "       'BUILDING_CLASS_AT_TIME_OF_SALE_A7',\n",
+              "       'BUILDING_CLASS_AT_TIME_OF_SALE_S1',\n",
+              "       'BUILDING_CLASS_AT_TIME_OF_SALE_A4',\n",
+              "       'BUILDING_CLASS_AT_TIME_OF_SALE_A6',\n",
+              "       'BUILDING_CLASS_AT_TIME_OF_SALE_A8',\n",
+              "       'BUILDING_CLASS_AT_TIME_OF_SALE_S0'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 125
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "4so7IkpL_P6E",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 799
+          "height": 782
         },
-        "outputId": "abc5c15f-3ead-410e-898f-c82b57e4fb8a"
+        "outputId": "2fcfc58d-3a26-4d3b-ee9c-7fbf297a7da4"
       },
       "source": [
         "import numpy as np\n",
@@ -9445,60 +9496,79 @@
         "\n",
         "    \n",
         "target = 'SALE_PRICE'\n",
-        "features = train_merged.select_dtypes('number').columns\n",
+        "features = ['BLOCK', 'LOT', 'ZIP_CODE', 'RESIDENTIAL_UNITS', 'COMMERCIAL_UNITS',\n",
+        "       'TOTAL_UNITS', 'GROSS_SQUARE_FEET', 'YEAR_BUILT',\n",
+        "       'TAX_CLASS_AT_TIME_OF_SALE', 'BOROUGH_3', 'BOROUGH_4',\n",
+        "       'BOROUGH_2', 'BOROUGH_5', 'BOROUGH_1', 'NEIGHBORHOOD_OTHER',\n",
+        "       'NEIGHBORHOOD_QUEENS VILLAGE', 'NEIGHBORHOOD_BAYSIDE',\n",
+        "       'NEIGHBORHOOD_FLUSHING-NORTH', 'NEIGHBORHOOD_LAURELTON',\n",
+        "       'NEIGHBORHOOD_SO. JAMAICA-BAISLEY PARK',\n",
+        "       'NEIGHBORHOOD_SPRINGFIELD GARDENS', 'NEIGHBORHOOD_GREAT KILLS',\n",
+        "       'NEIGHBORHOOD_SOUTH OZONE PARK', 'NEIGHBORHOOD_MIDLAND BEACH',\n",
+        "       'NEIGHBORHOOD_ST. ALBANS', 'BUILDING_CLASS_AT_TIME_OF_SALE_A9',\n",
+        "       'BUILDING_CLASS_AT_TIME_OF_SALE_A1',\n",
+        "       'BUILDING_CLASS_AT_TIME_OF_SALE_A5',\n",
+        "       'BUILDING_CLASS_AT_TIME_OF_SALE_A0',\n",
+        "       'BUILDING_CLASS_AT_TIME_OF_SALE_A2',\n",
+        "       'BUILDING_CLASS_AT_TIME_OF_SALE_A3',\n",
+        "       'BUILDING_CLASS_AT_TIME_OF_SALE_A7',\n",
+        "       'BUILDING_CLASS_AT_TIME_OF_SALE_S1',\n",
+        "       'BUILDING_CLASS_AT_TIME_OF_SALE_A4',\n",
+        "       'BUILDING_CLASS_AT_TIME_OF_SALE_A6',\n",
+        "       'BUILDING_CLASS_AT_TIME_OF_SALE_A8',\n",
+        "       'BUILDING_CLASS_AT_TIME_OF_SALE_S0']\n",
         "lr(train_merged, test_merged, features, target)"
       ],
-      "execution_count": 120,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Linear Regression with 38 features\n",
-            "Intercept 3.026798367500305e-09\n",
-            "BLOCK                                   -2.601565e-15\n",
-            "LOT                                     -3.392842e-13\n",
-            "ZIP_CODE                                 3.337046e-14\n",
-            "RESIDENTIAL_UNITS                        5.033528e-11\n",
-            "COMMERCIAL_UNITS                        -1.129786e-10\n",
-            "TOTAL_UNITS                             -6.264327e-11\n",
-            "GROSS_SQUARE_FEET                       -3.202621e-14\n",
-            "YEAR_BUILT                              -1.522098e-12\n",
-            "TAX_CLASS_AT_TIME_OF_SALE               -7.940934e-23\n",
-            "SALE_PRICE                               1.000000e+00\n",
-            "BOROUGH_3                                8.172354e-12\n",
-            "BOROUGH_4                                2.765020e-13\n",
-            "BOROUGH_2                                1.198403e-11\n",
-            "BOROUGH_5                                1.567163e-11\n",
-            "BOROUGH_1                               -3.610451e-11\n",
-            "NEIGHBORHOOD_OTHER                      -4.471964e-12\n",
-            "NEIGHBORHOOD_QUEENS VILLAGE             -1.145317e-11\n",
-            "NEIGHBORHOOD_BAYSIDE                     3.056993e-11\n",
-            "NEIGHBORHOOD_FLUSHING-NORTH              2.235944e-11\n",
-            "NEIGHBORHOOD_LAURELTON                  -9.042844e-12\n",
-            "NEIGHBORHOOD_SO. JAMAICA-BAISLEY PARK   -6.088707e-12\n",
-            "NEIGHBORHOOD_SPRINGFIELD GARDENS        -5.133234e-12\n",
-            "NEIGHBORHOOD_GREAT KILLS                 3.904677e-12\n",
-            "NEIGHBORHOOD_SOUTH OZONE PARK           -5.441228e-12\n",
-            "NEIGHBORHOOD_MIDLAND BEACH              -1.915366e-12\n",
-            "NEIGHBORHOOD_ST. ALBANS                 -1.328753e-11\n",
-            "BUILDING_CLASS_AT_TIME_OF_SALE_A9        9.832344e-13\n",
-            "BUILDING_CLASS_AT_TIME_OF_SALE_A1        6.694934e-13\n",
-            "BUILDING_CLASS_AT_TIME_OF_SALE_A5        6.336225e-13\n",
-            "BUILDING_CLASS_AT_TIME_OF_SALE_A0        2.900898e-11\n",
-            "BUILDING_CLASS_AT_TIME_OF_SALE_A2       -1.130733e-12\n",
-            "BUILDING_CLASS_AT_TIME_OF_SALE_A3        1.263147e-11\n",
-            "BUILDING_CLASS_AT_TIME_OF_SALE_A7        9.071135e-11\n",
-            "BUILDING_CLASS_AT_TIME_OF_SALE_S1       -2.122751e-11\n",
-            "BUILDING_CLASS_AT_TIME_OF_SALE_A4        1.515190e-11\n",
-            "BUILDING_CLASS_AT_TIME_OF_SALE_A6       -3.122101e-11\n",
-            "BUILDING_CLASS_AT_TIME_OF_SALE_A8       -5.033528e-11\n",
-            "BUILDING_CLASS_AT_TIME_OF_SALE_S0       -4.587552e-11\n",
-            "Train Root Mean Squared Error: 4.840316619723574e-10\n",
-            "Test Root Mean Square Error: 5.977447357605189e-10\n",
-            "Train Mean Absolute Error: 1.6682731386806283e-10\n",
-            "Test Mean Absolute Error: 1.7342511166977447e-10\n",
-            "Train R^2 Score: 1.0\n",
-            "Test R^2 Score: 1.0\n"
+            "Linear Regression with 37 features\n",
+            "Intercept 7126229.23508932\n",
+            "BLOCK                                   -2.332007e+01\n",
+            "LOT                                     -9.087815e+01\n",
+            "ZIP_CODE                                -3.452905e+02\n",
+            "RESIDENTIAL_UNITS                        2.101865e+05\n",
+            "COMMERCIAL_UNITS                        -5.585059e+05\n",
+            "TOTAL_UNITS                             -3.483194e+05\n",
+            "GROSS_SQUARE_FEET                        4.448038e+02\n",
+            "YEAR_BUILT                              -6.836229e+02\n",
+            "TAX_CLASS_AT_TIME_OF_SALE               -4.656613e-09\n",
+            "BOROUGH_3                               -7.659560e+05\n",
+            "BOROUGH_4                               -7.814708e+05\n",
+            "BOROUGH_2                               -1.374745e+06\n",
+            "BOROUGH_5                               -1.444878e+06\n",
+            "BOROUGH_1                                4.367049e+06\n",
+            "NEIGHBORHOOD_OTHER                      -7.397845e+03\n",
+            "NEIGHBORHOOD_QUEENS VILLAGE             -8.880594e+04\n",
+            "NEIGHBORHOOD_BAYSIDE                     8.403169e+04\n",
+            "NEIGHBORHOOD_FLUSHING-NORTH              7.659071e+04\n",
+            "NEIGHBORHOOD_LAURELTON                  -7.891048e+04\n",
+            "NEIGHBORHOOD_SO. JAMAICA-BAISLEY PARK    5.160358e+03\n",
+            "NEIGHBORHOOD_SPRINGFIELD GARDENS        -5.235471e+04\n",
+            "NEIGHBORHOOD_GREAT KILLS                 1.325318e+05\n",
+            "NEIGHBORHOOD_SOUTH OZONE PARK            2.179316e+04\n",
+            "NEIGHBORHOOD_MIDLAND BEACH               7.798244e+04\n",
+            "NEIGHBORHOOD_ST. ALBANS                 -1.706212e+05\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A9       -7.774438e+05\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A1       -7.162865e+05\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A5       -7.293767e+05\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A0       -6.079040e+05\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A2       -6.072102e+05\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A3       -7.338154e+05\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A7        5.142011e+06\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_S1        7.383840e+03\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A4        1.825961e+05\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A6       -6.668226e+05\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_A8       -2.101865e+05\n",
+            "BUILDING_CLASS_AT_TIME_OF_SALE_S0       -2.829449e+05\n",
+            "Train Root Mean Squared Error: 649679.2553902195\n",
+            "Test Root Mean Square Error: 612972.0336480779\n",
+            "Train Mean Absolute Error: 236128.81980009077\n",
+            "Test Mean Absolute Error: 234691.14663040655\n",
+            "Train R^2 Score: 0.6015027570147884\n",
+            "Test R^2 Score: 0.753961301278641\n"
           ],
           "name": "stdout"
         }
